# ballotpreview

./: .envrc  .gitignore  .isort.cfg  .pylintrc  .verchew.ini  Makefile  Procfile  Procfile.dev  README.md  app.json  circle.yml  main.py  pyproject.toml  requirements.txt
.circleci/: config.yml
app/: api.py  bugsnag_quart.py  main.py  render.py  settings.py  utils.py  views.py
app/static/: custom.css
app/templates/: _ballot_buddies.html  _ballot_header.html  _ballot_party.html  _ballot_plan.html  _ballot_position.html  _ballot_proposal.html  _ballot_share.html  _ballot_share_item.html  _footer.html  _header.html  _nav.html  _share_item.html  about.html  ballot.html  ballot_404.html  ballot_detail.html  ballot_share.html  base.html  election.html  election_detail.html  election_list.html  elections.html  elections_detail.html  index.html  item_share.html
sites/: localhost:5000
sites/mvic.sos.state.mi.us/Voter/GetMvicBallot/{precinct}/{ballot}/: default.yml
sites/share.michiganelections.io/about/: default.yml
sites/share.michiganelections.io/elections/: default.yml
sites/share.michiganelections.io/elections/{election}/: default.yml
sites/share.michiganelections.io/elections/{election}/precincts/{precinct}/: default.yml  menu-plan.yml  menu-share.yml  plan.yml  share.yml
tests/: conftest.py  test_images.py  test_site.py
tests/cassettes/: it_accepts_commas_to_separate_candidates.yaml  it_adds_votes_to_url.yaml  it_allows_sites_to_add_tracking_parameters.yaml  it_can_be_customized[district_id=16-lines3].yaml  it_can_be_customized[district_id=5-lines1].yaml  it_can_be_customized[district_id=7-lines2].yaml  it_can_be_customized[election_id=52-lines0].yaml  it_can_highlight_a_specific_item.yaml  it_can_highlight_the_first_item.yaml  it_converts_polyfill_dates_to_RFC_3339.yaml  it_display_error_with_invalid_voter_information.yaml  it_displays_error_with_invalid_voter_information.yaml  it_filters_primary_ballot_based_on_party.yaml  it_handles_invalid_ballots.yaml  it_handles_lack_of_highlighted_item.yaml  it_handles_lack_of_votes.yaml  it_handles_missing_ballots.yaml  it_handles_sharing_without_highlighted_item.yaml  it_handles_unknown_ballots.yaml  it_hides_candidates.yaml  it_hides_edit_links.yaml  it_hides_items_without_votes.yaml  it_hides_positions_with_zero_candidates.yaml  it_hides_share_button_when_no_votes.yaml  it_includes_ballot_item.yaml  it_includes_ballot_items.yaml  it_includes_election_name.yaml  it_keeps_name_through_redirect.yaml  it_keeps_name_through_submit.yaml  it_keeps_party_through_redirect.yaml  it_keeps_party_through_submit.yaml  it_links_to_elections.yaml  it_prompts_for_party_when_primary_ballot.yaml  it_redirects_to_active_election.yaml  it_redirects_to_ballot_with_valid_voter_information.yaml  it_redirects_to_remove_extra_votes.yaml  it_redirects_to_remove_extra_votes_based_on_seats.yaml  it_redirects_to_remove_invalid_votes.yaml  it_redirects_to_remove_unknown_keys.yaml  it_redirects_to_remove_unknown_positions.yaml  (+12 more)
tests/images/: index.html
