[tool.poetry]

name = "ballotpreview"
version = "1.0"
description = "Share how you plan to vote in Michigan."

authors = ["Citizen Labs <info@citizenlabs.org>"]
license = "GPLv3"

packages = [{ include = "app" }]

[tool.poetry.dependencies]

python = "3.11.9"

# Server
quart = "~0.18"

# Images
pillow = "^10.3"

# Utilities
aiohttp = "^3.9.2"
markdown = "^3.4"
minilog = "^2.3"

# Production
bugsnag = "^4.0"
gunicorn = "~22.0.0"
uvicorn = "~0.18.3"

[tool.poetry.group.dev.dependencies]

# Formatting
black = "~22.12"
isort = "~5.11"
djlint = "^1.34.1"

# Type Checking
mypy = "^1.10"
pylint = "~2.15"
types-cryptography = "*"
types-markdown = "*"

# Testing
pytest = "^7.4"
pytest-asyncio = "*"
pytest-vcr = "*"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-cov = "^4.0"
pytest-watch = "^4.2"
pomace = { version = "~0.12", optional = true }
time-machine = "*"

# Coverage
coveragespace = "^6.0"
coveralls = "*"

# Utilities
honcho = "^1.0"
rope = "^0.14.0"

[tool.poetry.extras]

e2e = ["pomace"]

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
