[tool.poetry]

name = "ballotpreview"
version = "1.0"
description = "Share how you plan to vote in Michigan."

authors = ["Citizen Labs <info@citizenlabs.org>"]
license = "GPLv3"

packages = [{ include = "app" }]

[tool.poetry.dependencies]

python = "3.11.10"

# Server
quart = "~0.19.7"
bugsnag = "^4.7.1"

# Images
pillow = "^10.3"

# Utilities
aiohttp = "^3.10.11"
markdown = "^3.4"
minilog = "^2.3"

# Production
gunicorn = "~22.0.0"
uvicorn = "~0.30.1"

# Testing
pomace = { version = "~0.12.7", optional = true }

[tool.poetry.group.dev.dependencies]

# Formatting
black = "~24.3"
isort = "~5.11"
djlint = "^1.34.1"

# Type Checking
mypy = "^1.10"
pylint = "~2.15"
rope = "*"
types-cryptography = "*"
types-markdown = "*"

# Testing
pytest = "^8.2.2"
pytest-asyncio = "*"
pytest-vcr = "*"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-cov = "^4.0"
pytest-watch = "^4.2"
time-machine = "*"

# Coverage
coveragespace = "^6.1"
coveralls = "*"

# Development
honcho = { git = "https://github.com/jacebrowning/honcho", branch = "support-importlib" }
livereload = "*"

[tool.poetry.extras]

e2e = ["pomace"]

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
